sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:4: error: not found: value i
  for (i<-0 to getNombreValeurs()-i){
                                  ^